--- a/index.html
+++ b/index.html
@@ -180,7 +180,12 @@
             <ul class="work-list">
                 <li class="work-list__item">
                     <div class="work-list__content">
-                        <img src="./images/what_we_do1.jpg" alt="работа с ПК" width="370">
+                        <img
+                        srcset="./images/what_we_do1.jpg 1px,
+                                ./images/what_we_do1-2x.jpg 2x"
+                        src="./images/what_we_do1.jpg" 
+                        alt="работа с ПК" 
+                        width="370"/>
                             <div class="work-list__wrap">
                                 <p class="work-list__text">Десктопные приложения</p>
                             </div>
@@ -188,7 +193,12 @@
                 </li>
                 <li class="work-list__item">
                     <div class="work-list__content">
-                        <img src="./images/what_we_do2.jpg" alt="работа с смартфоном" width="370">
+                        <img
+                        srcset="./images/what_we_do2.jpg 1px,
+                                ./images/what_we_do2-2x.jpg 2x"
+                        src="./images/what_we_do2.jpg" 
+                        alt="работа с смартфоном" 
+                        width="370"/>
                             <div class="work-list__wrap">
                                 <p class="work-list__text">Мобильные приложения</p>
                             </div>
@@ -196,7 +206,12 @@
                 </li>
                 <li class="work-list__item">
                     <div class="work-list__content">
-                        <img src="./images/what_we_do3.jpg" alt="работа с планщетом" width="370">
+                        <img
+                        srcset="./images/what_we_do3.jpg 1px,
+                                ./images/what_we_do3-2x.jpg 2x"
+                        src="./images/what_we_do3.jpg"
+                        alt="работа с планщетом"
+                        width="370">
                             <div class="work-list__wrap">
                                 <p class="work-list__text">Дизайнерские решения</p>
                             </div>
