--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                 ./images/what_we_do3-2x.jpg 2x"
                         src="./images/what_we_do3.jpg"
                         alt="работа с планщетом"
-                        width="370">
+                        width="370"/>
                             <div class="work-list__wrap">
                                 <p class="work-list__text">Дизайнерские решения</p>
                             </div>
